<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.useruser.followay.ui.fragment.selectNameAndGenderFragment.SelectNameAndGenderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        tools:context=".ui.fragment.selectNameAndGenderFragment.SelectNameAndGenderFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:text="@string/please_check_the_kids_name_and_more_text"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_user_name"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/OneLineEditText"
            android:text="@={viewModel.userName}"
            bind:error="@{viewModel.userNameError}"
            android:textColor="@android:color/white"
            app:backgroundTint="@android:color/white"
            android:layout_marginStart="55dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="Name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/select_sex"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/male"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/person_type_radiobutton_bg"
            android:checked="@={viewModel.isMaleSelected()}"
            android:layout_marginStart="35dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView15"
            tools:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:text="@string/female"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton2"
            app:layout_constraintEnd_toStartOf="@+id/radioButton2"
            app:layout_constraintTop_toTopOf="@+id/radioButton2" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={!viewModel.isMaleSelected()}"
            android:background="@drawable/person_type_radiobutton_bg"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintTop_toTopOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="Choose Image"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            bind:src="@{viewModel.userImagePath}"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:onClick="@{viewModel::chooseImageClick}"
            android:scaleType="centerCrop"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:background="@drawable/main_login_btn_bg"
            android:onClick="@{viewModel::doneClick}"
            android:layout_marginTop="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/done"
                android:textColor="@android:color/white" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>