<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.useruser.followay.ui.fragment.selectUserTypeFragment.SelectUserTypeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        tools:context=".ui.fragment.selectUserTypeFragment.SelectUserTypeFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/image_girl"
            app:layout_constraintTop_toBottomOf="@+id/radioButton"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
            app:layout_constraintStart_toStartOf="@+id/frameLayout4" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/select_person"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="56dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kid"
            android:textColor="@android:color/white"
            android:layout_marginEnd="44dp"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton4"
            app:layout_constraintEnd_toStartOf="@+id/radioButton4"
            app:layout_constraintTop_toTopOf="@+id/radioButton4" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/person_type_radiobutton_bg"
            android:checked="@={viewModel.isParentChecked()}"
            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            tools:checked="true" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:background="@drawable/person_type_radiobutton_bg"
            android:checked="@={!viewModel.isParentChecked()}"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioButton" />

        <FrameLayout
            android:id="@+id/frameLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/select_user_login_btn_bg"
            android:layout_marginTop="10dp"
            android:onClick="@{viewModel::loginClick}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

        </FrameLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="@{viewModel::createGroupClick}"
            android:text="@string/create_group"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>